# SimpleTasks

./: .gitignore  README.md  combined_project.txt  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-backend.yaml  ci-cd.yaml  ci-frontend.yaml  security-scan.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  tasks.py  users.py
backend/app/auth/: jwt.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 7fe4aab353f1_initial_migration.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py  user.py
backend/app/services/: task_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py  test_dependencies.py  test_integration.py  test_main.py  test_models.py  test_services.py  test_tasks.py  test_users.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  nginx.conf  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/features/auth/: AuthGuard.tsx
frontend/src/components/features/tasks/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-tasks.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: index.ts
(+1 files in other folders)
